adds instructions and start and end states

--- a/index.html
+++ b/index.html
@@ -19,6 +19,21 @@
       <div class="health-container">Health: <span id="health-box">100</span>%</div>
       <div class="score-container">Score: <span id="score-box">0</span></div>
     </div>
-    <script src="./app.bundle.js"></script>
+
+    <div class="game-instructions">
+      <img src="/images/arrows.png" height="150" width="150" />
+      <p class="">Use the arrow keys to navigate.</p>
+      <img src="/images/spacebar.png" height="50" width="100" />
+      <p class="">Use the spacebar to shoot asteroids.</p>
+      <img src="/images/sofi_logo.jpg" height="50" width="70" />
+      <p class="">Hit the logos to collect points and increase your score.</p>
+      <p class="">May the Force be with you.</p>
+      <button class="start-button" id="start-game">Lets Go</button>
+    </div>
+
+    <div class="end-game no-show">
+      <h2>Game Over</h2>
+      <button class="start-button" id="restart-game">Play Again</button>
+    </div>
   </body>
 </html>
