--- a/index.html
+++ b/index.html
@@ -35,5 +35,7 @@
       <h2>Game Over</h2>
       <button class="start-button" id="restart-game">Play Again</button>
     </div>
+
+    <script src="./app.bundle.js"></script>
   </body>
 </html>
